# taped

./: BACKLOG.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  docker-compose.yml
doc/: research.md
spotify_recorder/: config.py
src/: config.rs  lib.rs  main.rs  recorder.rs  track.rs  watchdog.rs
tests/: dbus_test.rs  mock.rs  recording_test.rs  stop_discard_test.rs
