[package]
name = "taped"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
id3 = "1.16"
libc = "0.2"
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.23", features = ["v4"] }
zbus = { version = "5.15", features = ["tokio"] }
